--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -146,15 +146,12 @@ This is the introduction.
 
 
 
-\chapter{Preliminaries}
+\section{Preliminaries}
 \label{preliminaries}
 
-\section{Qualitative Spatial Representation and Reasoning}
-\subsection{Applications of Spatial Reasoning}
-\subsubsection{Architectural Design}
-\subsubsection{Geographic Information Systems}
-\subsubsection{Robotics}
-\section{Constraint Logic Programming}
+\subsection{Qualitative Spatial Representation and Reasoning}
+\subsubsection{Applications of Spatial Reasoning}
+\subsection{Constraint Logic Programming}
 
 
 \chapter{Previous Work}
